Issue #4313: Fixed segfault on IDLE exit. Reverted r57540 and reopened Issue #1028.